<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="35.0dip"
		android:orientation="horizontal" 
		android:gravity="center_vertical">
     	<Button 
     		android:id="@+id/frame_btn_article_recommend"
     		style="@style/frame_button"
         	android:text="@string/frame_title_article_recommend"/>
     	<ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
     	<Button 
     		android:id="@+id/frame_btn_article_lastest"
     		style="@style/frame_button"
         	android:text="@string/frame_title_article_lastest"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
     	<Button 
     		android:id="@+id/frame_btn_article_zatan"
     		style="@style/frame_button"
         	android:text="@string/frame_title_article_zatan"/>
     	<ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
        <Button
            android:id="@+id/frame_btn_article_all"
            style="@style/frame_button"
            android:text="@string/frame_title_article_all"/> 
    </LinearLayout>
    
	<net.oschina.app.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_article"
	    style="@style/widget_listview"/>

</LinearLayout>
